--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<title>Webアプリ</title>
+<title>Keras Flask Classifier</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-<h1>Webアプリ</h1>
+<h1>Keras Flask Classifier</h1>
 <section class="content">
   <header>
     {% block header %}{% endblock %}
